Staff account included in Engine, In Our SaaS this is in our vsLicense application

--- a/src/VSOnline.VSECommerce/appsettings.json
+++ b/src/VSOnline.VSECommerce/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AppSettings": {
-    "Jwtkey": "YourSecretKey",
-    "JwtIssuer": "YourIssuee",
+    "Jwtkey": "ACDt1vR3lXToPQ1g3MyN", //YourSecretKey
+    "JwtIssuer": "https://localhost:7148/", //YourIssuer
     "CategoryFolder": "Category/",
     "ImageFolder": "Products/",
     "ImageUrlBaseUploaded": "Products/",
